implement product service client
