# api/src/main/resources/api.yaml
@@ -277,39 +277,40 @@ components:
         - COLLECTING
 
     FullOrderDto:
-      OrderDto:
-        type: object
-        properties:
-          id:
-            description: Unique Identifier of Order.
-            type: string
-            readOnly: true
-          name:
-            description: Name of Order.
-            type: string
-            maxLength: 100
-          customerId:
-            type: string
-          total:
-            type: number
-            format: double
-          shippingType:
-            $ref: '#/components/schemas/ShippingType'
-          status:
-            $ref: '#/components/schemas/OrderStatus'
-          products:
+      type: object
+      properties:
+        id:
+          description: Unique Identifier of Order.
+          type: string
+          readOnly: true
+        name:
+          description: Name of Order.
+          type: string
+          maxLength: 100
+        customerId:
+          type: string
+        total:
+          type: number
+          format: double
+        shippingType:
+          $ref: '#/components/schemas/ShippingType'
+        status:
+          $ref: '#/components/schemas/OrderStatus'
+        products:
+          type: array
+          items:
             $ref: '#/components/schemas/ProductDto'
-          paymentId:
-            type: integer
-        required:
-          - name
-          - customerId
-          - total
-          - shippingType
-          - status
-          - products
+        paymentId:
+          type: integer
+      required:
+        - name
+        - customerId
+        - total
+        - shippingType
+        - status
+        - products
 
-    ProductDTO:
+    ProductDto:
       type: object
       properties:
         id:
